# stm32Duino-cmake

./: CMakeLists.txt  README.md  build.bat  configure.bat  flash.bat
cmake/: gcc.cmake  gcc_arduino.cmake
libs/: CMakeLists.txt
src/: CMakeLists.txt  blink.cpp  blink.cpp.bak  fade.cpp
